[package]
name = "urbit_bot"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
urbit-chatbot-framework = "0.1.2"
headless_chrome = "0.9.0"
dotenv = "0.15.0"
rust-s3 = "0.26.4"
failure = "^0.1.8"
chrono = "0.4"
