[package]
name = "urbit_bot"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
headless_chrome = "0.9.0"
dotenv = "0.15.0"
rust-s3 = "0.26.4"
failure = "^0.1.8"
chrono = "0.4"
actix-web = "3"
tokio = { version = "1", features = ["full"] }
urbit-http-api          = {version = "0.7.2"}
json                    = "0.12.4"
